--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -44,11 +44,11 @@ h1{
 	background-color: rgb(39,39,39);
 	display: block;
 	width: 11%;
-	height: 250px;
+	height: auto;
+	padding: 0 0.5% 1% 1%;
 	position: absolute;
 	top: 0;
 	left: 0;
-	padding-left: 1%;
 	opacity: 0.8;
 }
 
@@ -70,4 +70,37 @@ canvas{
 	position: absolute;
 	top: 0;
 	z-index: -1;
+}
+
+.sign-up{
+	display: block;
+	background-color: rgb(39,39,39);
+	opacity: 0.9;
+	margin-top: 10%;
+	margin-left: 30%;
+	width: 400px;
+	height: auto;
+	padding: 2%;
+	text-align: center;
+}
+
+.sign-up h1{
+	font-weight: 400;
+	font-size: 20px;
+}
+
+.sign-up form input#user_username, #user_email, #user_password, #user_password_confirmation{
+	display: block;
+	padding: 1%;
+	font-family: 'Lato', sans-serif;
+	width: 80%;
+	margin: 0 auto;
+	font-size: 15px;
+	margin-bottom: 2%;
+	font-weight: 300;
+	color: black;
+}
+
+.sign-up input{
+	padding: 1%;
 }
