sign up working

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -52,6 +52,11 @@ h1{
 	opacity: 0.8;
 }
 
+.menu a{
+	color: white;
+	text-decoration: none;
+}
+
 #microphone, #song{
 	margin: 1%;
 	display: block;
@@ -70,6 +75,40 @@ canvas{
 	position: absolute;
 	top: 0;
 	z-index: -1;
+}
+
+/*--------------- LOGIN-CHOICE SECTION ------------------*/
+
+#login-choice{
+	background-color: rgb(39,39,39);
+	display: block;
+	margin: 15% auto;
+	width: 25%;
+	text-align: center;
+	opacity: 0.9;
+	padding: 2%;
+}
+
+#login-choice h1{
+	font-weight: 300;
+	font-size: 20px;
+
+}
+
+#sign-in-form{
+	display: block;
+	background-color: rgb(39,39,39);
+	padding: 2%;
+	width: 45%;
+	margin: 10% auto;
+	opacity: 0.9;
+	text-align: center;
+	color: white;
+}
+
+#sign-in-form h1{
+	font-weight: 300;
+	font-size: 20px;
 }
 
 .sign-up{
@@ -103,4 +142,30 @@ canvas{
 
 .sign-up input{
 	padding: 1%;
+}
+
+#save-settings{
+	width: 30%;
+	background-color: rgb(39,39,39);
+	display: block;
+	margin: 10% auto;
+	padding: 2%;
+	text-align: center;
+	box-shadow: 1px 1px 20px 5px #bbb;
+}
+
+#save-settings input{
+	padding: 1%;
+	width: 50%;
+}
+
+#save-settings button{
+	padding: 1.5%;
+	font-family: 'Lato', sans-serif;
+}
+
+#save-settings h1{
+	font-weight: 300;
+	font-size: 19px;
+	text-align: center;
 }
