--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -38,6 +38,7 @@
 		</select>
 		<button id="saveSettings">Save</button>
 		<button class="newList">New</button>
+		<button class="deleteList">Delete</button>
 		<p>Size: <input id="sizeInput" type="range" name="range" min="-5" max="5"></p>
 	</div>
 
