--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -33,13 +33,16 @@
 	</div>
 
 	<div class="control_panel">
-		<select class="lists">
-			<option value="Default">Default</option>
-		</select>
-		<button id="saveSettings">Save</button>
-		<button class="newList">New</button>
-		<button class="deleteList">Delete</button>
-		<p>Size: <input id="sizeInput" type="range" name="range" min="-5" max="5"></p>
+		<div id="inner_panel">
+			<select class="lists">
+				<option value="Default">Default</option>
+			</select>
+			<button id="saveSettings">Save</button>
+			<button class="newList">New</button>
+			<button class="deleteList">Delete</button>
+			<p>Size: <input id="sizeInput" type="range" name="range" min="-5" max="5"></p>
+		</div>
+		<div id="closeControls">Close controls</div>
 	</div>
 
 	<div id="newListSettings" style="display: none">
