--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -126,6 +126,10 @@
 		</div> 
 	<% end %>
 
+	<div id="credits">
+		<p>Music: "Hunrgy Face" by <a href="http://www.rdio.com/artist/Mogwai/">Mogwai</a></p>
+	</div>
+
 	<!--<script src="http://cdnjs.cloudflare.com/ajax/libs/three.js/r67/three.min.js"></script>-->
 </body>
 </html>
