--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -27,7 +27,7 @@
 		<h3>Effects</h3>
 		<p id="cube">Cube</p>
 		<p id="landscape">Landscape</p>
-		<p id="landscapeNew">New landscape</p>
+		<p id="city">City</p>
 		<div id="microphone">Use microphone</div>
 		<div id="song">Use song</div>
 	</div>
