--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,61 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Sync</title>
+  <title>Spectrm - An Interactive Music Visualiser using Three.js and the Web Audio API</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
+	<div class="menu">
+		<h1>SPECTRM</h1>
+		<%== usernav %>
+		<h3>Effects</h3>
+		<p id="cube">Cube</p>
+		<p id="landscape">Landscape</p>
+		<p id="city">City</p>
+		<div id="microphone">Use microphone</div>
+		<div id="song">Use song</div>
+
+		<div id="twitter">
+			<a href="https://twitter.com/share" class="twitter-share-button" data-text="Spectrm - An Interactive Music Visualiser using Three.js and the Web Audio API" data-via="Charlie__Gerard" data-hashtags="creativecoding">Tweet</a>
+			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+			</a>
+		</div>
+		<div id="github">
+			<iframe src="http://ghbtns.com/github-btn.html?user=charliegerard&repo=drunken-wookie&type=fork"
+  			allowtransparency="true" frameborder="0" scrolling="0" width="53" height="20"></iframe>
+		</div>
+	</div>
+
 <%= yield %>
+
+	<div class="control_panel">
+		<div id="inner_panel">
+			<select class="lists">
+				<option value="Default">Default</option>
+			</select>
+			<button id="saveSettings">Save</button>
+			<button class="newList">New</button>
+			<button class="deleteList">Delete</button>
+			<p>Size: <input id="sizeInput" type="range" name="range" min="-5" max="5"></p>
+		</div>
+		<div id="closeControls">Close controls</div>
+	</div>
+
+
+<!-- Google Analytics -->
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-51162916-1', 'spectrm.herokuapp.com');
+	  ga('send', 'pageview');
+	</script>
+
 
 </body>
 </html>
