--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -21,18 +21,18 @@
 </head>
 <body>
 
-	<div class="menu">
+<!-- 	<div class="menu">
 		<h1>SYNC</h1>
-		<%== usernav %>
+		<%#== usernav %>
 		<h3>Effects</h3>
 		<p id="cube">Cube</p>
 		<p id="landscape">Landscape</p>
 		<p id="city">City</p>
 		<div id="microphone">Use microphone</div>
 		<div id="song">Use song</div>
-	</div>
+	</div> -->
 
-	<div class="control_panel">
+<!-- 	<div class="control_panel">
 		<div id="inner_panel">
 			<select class="lists">
 				<option value="Default">Default</option>
@@ -43,7 +43,7 @@
 			<p>Size: <input id="sizeInput" type="range" name="range" min="-5" max="5"></p>
 		</div>
 		<div id="closeControls">Close controls</div>
-	</div>
+	</div> -->
 
 	<div id="newListSettings" style="display: none">
 		<h1>Give a name to your new list</h1>
