--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
 		<p id="cube">Cube</p>
 		<p id="landscape">Landscape</p>
 		<p id="city">City</p>
+		<p id="sphere">Sphere</p>
 		<div id="microphone">Use microphone</div>
 		<div id="song">Use song</div>
 
