leap motion working

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    "application", media: "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+   <script src="//js.leapmotion.com/leap-0.5.0.js"></script>
 </head>
 <body>
 
@@ -16,6 +17,7 @@
 		<p id="landscape">Landscape</p>
 		<p id="city">City</p>
 		<p id="sphere">Sphere</p>
+		<p id="leap">Leap</p>
 		<div id="microphone">Use microphone</div>
 		<div id="song">Use song</div>
 
