--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -284,3 +284,95 @@ input#sizeInput{
 	font-weight: 300;
 	font-size: 12px;
 }
+/*
+#playerControls{
+	position: absolute;
+	bottom: 0;
+	left: 40%;
+}*/
+
+/*--------------------- TESTS ------------------*/
+#controlPanel {
+    z-index: 50;
+    position: absolute;
+    bottom: 35px;
+    width: 100%;
+    color: #999;
+    max-height: 600px;
+    -webkit-transition: max-height 0.8s;
+   	-moz-transition: max-height 0.8s;
+   	transition: max-height 0.8s;
+    overflow: hidden;
+}
+#controlPanel.hidden {
+    max-height: 52px;
+}
+
+#tab {
+    padding: 10px 16px 2px 16px;
+    font-size: 32px;
+}
+#tab>a {
+    background-color: rgba(255, 255, 255, 0.15);
+    padding: 7px 10px 3px 10px;
+}
+/*#trackInfoPanel {
+    float: left;
+    width: 100%;
+    overflow: hidden;
+    max-height: 200px;
+	-webkit-transition: max-height 0.8s;
+	-moz-transition: max-height 0.8s;
+	transition: max-height 0.8s;
+    background-color: rgba(255, 255, 255, 0.15);
+    padding-top: 10px;
+}*/
+/*#trackInfoPanel.hidden {
+    max-height: 0px;
+    -webkit-transition: max-height 0.2s;
+    -moz-transition: max-height 0.2s;
+    transition: max-height 0.2s;
+}*/
+
+
+#playerControls {
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    margin-bottom: 0.5%;
+    /*background-color: rgba(255, 255, 255, 0.15);*/
+	bottom: 0;
+	/*left: 40%;*/
+}
+
+#input {
+    font-size: 12px;
+    padding: 0.3%;
+    margin-bottom: 0px;
+    margin-left: auto;
+   	width: 35%;
+    max-width: 80%;
+    color: white;
+    opacity: 0.6;
+    background-color: #EBEBEB;
+    color: #333;
+    border: 1px solid #111;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    z-index: 10;
+}
+#submit {
+    position: absolute;
+    color: #fff;
+    font-size: 32px;
+    padding: 5px;
+    background: none;
+    border: none;
+}
+#player {
+    width: 30%;
+    margin-left: auto;
+    margin-top: 3%;
+    height: 20%;
+}
