--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
 			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 			</a>
 		</div>
+
 		<div id="github">
 			<iframe src="http://ghbtns.com/github-btn.html?user=charliegerard&repo=drunken-wookie&type=fork"
   			allowtransparency="true" frameborder="0" scrolling="0" width="53" height="20"></iframe>
@@ -46,6 +47,39 @@
 		</div>
 		<div id="closeControls">Close controls</div>
 	</div>
+
+	<!--Player-->
+<!-- 	<div id="playerControls">
+        <form id="form">
+            <input id="input" placeholder="Paste Soundcloud URL here (https://soundcloud.com/artist/track)">
+            <button type="submit" id="submit"><i class="icon-play"></i></button><br>
+        </form>
+        <audio id="player" controls="" autoplay="" preload autobuffer></audio>
+    </div> -->
+
+    <!-- Oh dear -->
+   <!--  <div id="visualizer"></div> -->
+
+	<!-- <div id="controlPanel" class="hidden"> -->
+<!-- 	    <div id="tab"><a href="#" id="toggleButton"><i class="icon-menu"></i></a></div>
+	    <div id="trackInfoPanel" class="hidden">
+	        <img id="infoImage" src="">
+	        <div id="infoArtist"></div>
+	        <div id="infoTrack"></div>
+	    </div> -->
+	    <div id="playerControls">
+	        <form id="form">
+	            <input id="input" placeholder="Paste Soundcloud URL here (https://soundcloud.com/artist/track)">
+	            <button type="submit" id="submit"><i class="icon-play"></i></button><br>
+	        </form>
+	        <audio id="player" controls="" autoplay="" preload autobuffer></audio>
+	   </div>
+	<!-- </div> -->
+
+<!-- End of oh dead -->
+
+	<!--Soundcloud stuff -->
+	<script src="//connect.soundcloud.com/sdk.js"></script>
 
 
 <!-- Google Analytics -->
