fix little bugs

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 		<p id="landscape">Landscape</p>
 		<p id="city">City</p>
 		<p id="sphere">Sphere</p>
-		<p id="leap">Leap</p>
+		<p id="leap">Use with Leap Motion!</p>
 		<div id="microphone">Use microphone</div>
 		<div id="song">Use song</div>
 
@@ -48,25 +48,8 @@
 		<div id="closeControls">Close controls</div>
 	</div>
 
-	<!--Player-->
-<!-- 	<div id="playerControls">
-        <form id="form">
-            <input id="input" placeholder="Paste Soundcloud URL here (https://soundcloud.com/artist/track)">
-            <button type="submit" id="submit"><i class="icon-play"></i></button><br>
-        </form>
-        <audio id="player" controls="" autoplay="" preload autobuffer></audio>
-    </div> -->
 
-    <!-- Oh dear -->
-   <!--  <div id="visualizer"></div> -->
-
-	<!-- <div id="controlPanel" class="hidden"> -->
-<!-- 	    <div id="tab"><a href="#" id="toggleButton"><i class="icon-menu"></i></a></div>
-	    <div id="trackInfoPanel" class="hidden">
-	        <img id="infoImage" src="">
-	        <div id="infoArtist"></div>
-	        <div id="infoTrack"></div>
-	    </div> -->
+    <!-- Soundcloud input field -->
 	    <div id="playerControls">
 	        <form id="form">
 	            <input id="input" placeholder="Paste Soundcloud URL here (https://soundcloud.com/artist/track)">
@@ -74,15 +57,11 @@
 	        </form>
 	        <audio id="player" controls="" autoplay="" preload autobuffer></audio>
 	   </div>
-	<!-- </div> -->
 
-<!-- End of oh dead -->
-
-	<!--Soundcloud stuff -->
 	<script src="//connect.soundcloud.com/sdk.js"></script>
 
 
-<!-- Google Analytics -->
+	<!-- Google Analytics -->
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
