--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -83,7 +83,7 @@ h1{
 }
 
 canvas{
-	position: absolute;
+/*	position: absolute;*/
 	top: 0;
 	z-index: -1;
 }
@@ -348,12 +348,12 @@ input#sizeInput{
 #input {
     font-size: 12px;
     padding: 0.3%;
-    margin-bottom: 0px;
-    margin-left: auto;
+    margin: 0 auto;
    	width: 35%;
     max-width: 80%;
     color: white;
     opacity: 0.6;
+    display: block;
     background-color: #EBEBEB;
     color: #333;
     border: 1px solid #111;
@@ -373,6 +373,7 @@ input#sizeInput{
 #player {
     width: 30%;
     margin-left: auto;
-    margin-top: 3%;
     height: 20%;
+    border: none;
+    height: 1%;
 }
