--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,11 @@
 		</div>
 	</div>
 
+	<div id="errorLeap" style="display:none">
+		<h3>Sorry, you do not seem to have the Leap Motion connected</h3>
+		<button id="buttonLeap">Ok no big deal</button>
+	</div>
+
 <%= yield %>
 
 	<div class="control_panel">
