--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 		<div id="song">Use song</div>
 
 		<div id="twitter">
-			<a href="https://twitter.com/share" class="twitter-share-button" data-text="Spectrm - An Interactive Music Visualiser using Three.js and the Web Audio API" data-via="Charlie__Gerard" data-hashtags="creativecoding">Tweet</a>
+			<a href="https://twitter.com/share" class="twitter-share-button" data-text="Spectrm - An Interactive Music Visualizer using Three.js and the Web Audio API" data-via="Charlie__Gerard" data-hashtags="creativecoding">Tweet</a>
 			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 			</a>
 		</div>
