--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Spectrm - An Interactive Music Visualiser using Three.js and the Web Audio API</title>
+  <title>Spectrm - An Interactive Music Visualizer using Three.js and the Web Audio API</title>
   <%= stylesheet_link_tag    "application", media: "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
