--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
 	            <input id="input" placeholder="Paste Soundcloud URL here (https://soundcloud.com/artist/track)">
 	            <button type="submit" id="submit"><i class="icon-play"></i></button><br>
 	        </form>
-	        <audio id="player" controls="" autoplay="" preload autobuffer></audio>
+	        <audio id="player" controls autoplay preload autobuffer></audio>
 	   </div>
 
 	<script src="//connect.soundcloud.com/sdk.js"></script>
