mobile error message

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,11 @@
    <script src="//js.leapmotion.com/leap-0.5.0.js"></script>
 </head>
 <body>
+	<div id="mobile">
+		<p>It seems like you're using a mobile device so this app will probably not work properly as the features are not supported yet. Please try again on a desktop! :)</p>
+		<button id="mobile_button">Ok, no worries</button>
+	</div>
+
 	<div class="menu">
 		<h1>SPECTRM</h1>
 		<%== usernav %>
