--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,16 @@
 		<button id="mobile_button">Ok, no worries</button>
 	</div>
 
+	<div id="instructions">
+		<p>Hello World! Welcome to Spectrm.</p>
+		<p>To use this app, simply:</br>
+		 - Choose one of the 3D shapes on the left menu. </br>
+		 - Choose to use either the song, the microphone or any song from Soundcloud.
+		 </p>
+		 <p>You can also play around with the settings on the right and save them to load them back later!</p>
+		 <button id="instructions-button">Ok, I get it</button>
+	</div>
+
 	<div class="menu">
 		<h1>SPECTRM</h1>
 		<%== usernav %>
