--- a/app/assets/stylesheets/mobile.css
+++ b/app/assets/stylesheets/mobile.css
@@ -17,13 +17,11 @@
 
 	#mobile p{
 		font-size: 15px;
-		/*font-weight: bold;*/
 		font-family: Helvetica;
 		line-height: 17px;
 	}
 
 	#instructions{
-		width: 100%;
-		margin: 0%;
+		display: none;
 	}
 }
