remove leap motion error message

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <script src="//js.leapmotion.com/leap-0.5.0.js"></script>
+   <script src="http://js.leapmotion.com/leap-0.5.0.js"></script>
 </head>
 <body>
 	<div id="mobile">
